<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerform">

    <LinearLayout
        android:id="@+id/lay_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:paddingTop="@dimen/text_margin">

        <EditText
            android:id="@+id/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:tag="First Name" />
    </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="@dimen/text_margin">

            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:tag="Last Name" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/h_email"
            android:inputType="textPersonName"
            android:tag="Email"
            android:textAlignment="viewStart" />
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_addressline1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/address_line1"
                android:inputType="textPersonName"
                android:tag="Address line 1"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_addressline2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/address_line2"
                android:inputType="textPersonName"
                android:tag="Address line 2"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edit_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/store_name"
                android:inputType="textPersonName"
                android:tag="Pincode"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <EditText
                android:id="@+id/store_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/pin_code"
                android:inputType="textPersonName"
                android:tag="Store Name"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/registerform"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"
                android:layout_margin="30dp"
                android:textStyle="bold"/>

            <ProgressBar
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/progressbar_registerform"
                android:layout_gravity="center"
                android:visibility="gone"/>


        </FrameLayout>

    </LinearLayout>


</ScrollView>

